--- a/src/main/resources/gruppe/fire/css/main.css
+++ b/src/main/resources/gruppe/fire/css/main.css
@@ -1,32 +1,31 @@
-.dialog-pane{
-    -fx-border-color:black;
-    -fx-border-width:2.0px;
+.button{
+    -fx-background-color: #2e048f;
+    -fx-background-radius: 20px;
+    -fx-cursor: HAND;
 }
 
-/**Costumization of The Bar where the buttons are located**/
-.dialog-pane > .button-bar > .container {
-    -fx-background-color:black;
+.button:hover{
+    -fx-background-color: rgba(46,4,143,0.62);
+    -fx-background-radius: 20px;
+    -fx-cursor: HAND;
+}
+.button:pressed {
+    -fx-background-color: rgba(46,4,143,0.41);
+    -fx-background-radius: 20px;
+    -fx-cursor: HAND
+
 }
 
-.dialog-pane > .content.label {
-    -fx-padding: 0.5em 0.5em 0.5em 0.5em;
-    -fx-background-color: yellow;
-    -fx-text-fill:black;
-    -fx-font-size:15.0px;
+#noFile {
+    -fx-background-color: #363636;
+    -fx-opacity: 0.5 ;
+    -fx-background-radius: 20px;
+    -fx-padding: 5px;
+    -fx-max-width: 300
 }
 
-
-/**Costumization of Buttons**/
-.dialog-pane .button{
-    -fx-background-color:black;
-    -fx-text-fill:white;
-    -fx-wrap-text: true;
-    -fx-effect: dropshadow( three-pass-box, yellow, 10.0, 0.0, 0.0, 0.0);
-    -fx-cursor:hand;
-}
-
-.dialog-pane .button:hover{
-    -fx-background-color:white;
-    -fx-text-fill:black;
-    -fx-font-weight:bold;
+#storyButtons {
+    -fx-background-color: rgba(255,255,255,0.09);
+    -fx-background-radius: 10px;
+    -fx-pref-width: 300
 }
