--- a/src/main/resources/gruppe/fire/css/main.css
+++ b/src/main/resources/gruppe/fire/css/main.css
@@ -256,7 +256,7 @@
 
 .spinner {
     -fx-background-color: rgba(255, 255, 255, 0.46);
-    -fx-background-radius: 30px;
+    -fx-background-radius: 30;
 }
 
 .spinner .increment-arrow-button,
