--- a/src/main/resources/gruppe/fire/css/main.css
+++ b/src/main/resources/gruppe/fire/css/main.css
@@ -1,3 +1,6 @@
+#mainRoot {
+    -fx-background-color: linear-gradient(#6746a9, #3829cd)
+}
 .button{
     -fx-background-color: #4f1fb9;
     -fx-text-fill: #ffffff;
@@ -17,6 +20,58 @@
     -fx-cursor: HAND;
     -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.5), 0, 2, 0, 1);
     -fx-translate-y: 2px;
+}
+
+#importMenu {
+    -fx-background-color: rgba(0,0,0,0.7); -fx-background-radius: 40px
+}
+
+#defaultStoryBox {
+    -fx-background-color: rgba(0,0,0,0.7);
+    -fx-background-radius: 40px;
+}
+
+#savedBox {
+    -fx-background-color: rgba(0,0,0,0.7);
+    -fx-background-radius: 40px;
+}
+
+#savedVBox {
+    -fx-background-color: rgba(54,54,54,0.5);
+    -fx-background-radius: 30;
+}
+
+#backButton {
+    -fx-background-color: rgba(0,0,0,0.7);
+    -fx-background-radius: 40px;
+}
+
+#tutorialBox {
+    -fx-background-color: rgba(0,0,0,0.7);
+    -fx-background-radius: 40px;
+}
+
+#settingsPane {
+    -fx-background-color: rgba(0,0,0,0.7);
+    -fx-background-radius: 40px;
+}
+
+#startMenu {
+    -fx-background-color: rgba(0,0,0,0);
+    -fx-background-radius: 40px;
+}
+
+#aboutBox {
+    -fx-background-color: rgba(0,0,0,0.9);
+    -fx-background-radius: 30px;
+}
+
+#aboutButton {
+    -fx-background-color: transparent;
+}
+
+#quitBox {
+    -fx-background-color: rgba(0,0,0,0.9);
 }
 
 #noFile {
