--- a/src/main/resources/gruppe/fire/css/backup.css
+++ b/src/main/resources/gruppe/fire/css/backup.css
@@ -1,20 +1,20 @@
-.button {
-    -fx-background-color: #2e048f;
+#defaultStory {
+    -fx-background-color: rgba(255, 255, 255, 0.11);
     -fx-background-radius: 20px;
     -fx-cursor: HAND;
-    -fx-effect: dropshadow(gaussian, rgb(29, 3, 89), 0, 6.8025, 0, 3);
+    -fx-effect: dropshadow(gaussian, rgba(255, 255, 255, 0.05), 0, 6.8025, 0, 3);
 }
 
-.button:hover {
-    -fx-background-color: rgba(46, 4, 143, 0.62);
+#defaultStory:hover {
+    -fx-background-color: rgba(255, 255, 255, 0.32);
     -fx-background-radius: 20px;
     -fx-cursor: HAND;
 }
 
-.button:pressed {
-    -fx-background-color: rgba(46, 4, 143, 0.41);
+#defaultStory:pressed {
+    -fx-background-color: rgba(215, 215, 215, 0.41);
     -fx-background-radius: 20px;
     -fx-cursor: HAND;
-    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.5), 0, 2, 0, 1);
+    -fx-effect: dropshadow(gaussian, rgba(255, 255, 255, 0.27), 0, 2, 0, 1);
     -fx-translate-y: 2px;
 }
